namespace/llm/comfyui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: llm
  labels:
    app.kubernetes.io/name: comfyui
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: comfyui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: comfyui
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: nvidia
      containers:
        - name: comfyui
        # renovate: datasource=docker depName=docker.io/yanwk/comfyui-boot
          image: docker.io/yanwk/comfyui-boot:cu128-slim@sha256:8335b7c9989ec90689aecffa96b5e4021d862d7c7f69946908d6b4bc4702fde4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8188
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /root
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
              nvidia.com/gpu: "1"
            limits:
              cpu: "2"
              memory: "4Gi"
              nvidia.com/gpu: "1"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: comfyui-config
