namespace/llm/comfyui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  namespace: llm
spec:
  selector:
    app: comfyui
  ports:
    - port: 80
      targetPort: 8188
      protocol: TCP
  type: ClusterIP
