namespace/llm/comfyui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comfyui-https
  namespace: llm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`comfyui.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: comfyui
          port: 80
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comfyui-http
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`comfyui.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: comfyui
          port: 80
